--- a/index.html
+++ b/index.html
@@ -52,19 +52,19 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-info display-4" href="index.html#header3-c">
+                    <a class="nav-link link text-info display-4" href="index.html#features11-p">
                         
                         About</a>
                 </li><li class="nav-item">
-                    <a class="nav-link link text-info display-4" href="index.html#footer2-a">Stores</a>
+                    <a class="nav-link link text-info display-4" href="index.html#header1-f">Stores</a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="index.html#gallery2-3"><span class="mbrib-hot-cup mbr-iconfont mbr-iconfont-btn"></span>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="index.html#content15-o"><span class="mbrib-hot-cup mbr-iconfont mbr-iconfont-btn"></span>
                     <font face="MobiriseIcons"><br></font>See Menu</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/l">free web templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.me/s">free bootstrap themes</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
