create github pages

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="cid-r2TGFy0KJc mbr-fullscreen mbr-parallax-background" id="header2-1a">
+<section class="engine"><a href="https://mobirise.info/y">html web templates</a></section><section class="cid-r2TGFy0KJc mbr-fullscreen mbr-parallax-background" id="header2-1a">
 
     
 
@@ -239,7 +239,7 @@
     <div class="container">
         <div class="media-container-row">
             <div class="mbr-figure" style="width: 100%;">
-                <img src="assets/images/ubereats-2-818x984.jpg" alt="Mobirise" title="">
+                <img src="assets/images/delivery-836x1044.jpg" alt="Mobirise" title="">
             </div>
 
             <div class="media-content">
@@ -363,7 +363,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <div data-form-alert="" hidden="">Thanks for subscribing! Watch out for Royaltea updates in your inbox :)</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="MiNR4VgKvxFKGnT8yA+z5jB7L3LN6U41rNunxVhSqr4qQWISIK3zyCx5WfFq51LoZ9ueEkhn4dMsifyAToexSZByfABQiMrnW+KnwFeE1MhdXIZxYmc6ds/nay4cNLPT">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="6BTGNrbkL7lLjwdbUqRcO6xot8JL/+aZjyX45c9KxFQ/KatOU4KV+BNeF47cxL3YJhv+mcCQ5i+A3trPPhLdo0he3bwkHco/dZw1JzsEH6I2pxP148gND0SFwPQ5wouZ">
                     <div class="mbr-subscribe input-group">
                         <input class="form-control" type="email" name="email" placeholder="Email" data-form-field="Email" required="" id="email-form3-1h">
                         <span class="input-group-btn"><button href="" type="submit" class="btn btn-primary display-4">Subscribe</button></span>
@@ -394,7 +394,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your feedback. We will get get back to you shortly.</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="fpWtfc+sOakxq0YoHzLr+egfdP1zMFXIjsj7vrHD0OEuW9JVfw8en7T+uHJxvU6sMO4dNEm1xEZcLWPPkLBd2kQT0zHq9XBm1WRzqZj8cPSb/+tA/uCzZxNH9SQjOuc3">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Sk5XYEKhkMWH2pinZ7JHcXCGCanRcsiUZgdhL7RHa27YRfQoWag0EXvLjV5FjK7dQTS/Hl62IlHmWEJeNcb30qJ2isSw9Jgkje5rrRgHMwZFTrRU0nIb6DLnego2TTPn">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
